# livekit-plugins-spatialreal

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
livekit/plugins/spatialreal/: __init__.py  avatar.py
