[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livekit-plugins-spatialreal"
dynamic = ["version"]
description = "Agent Framework plugin for SpatialReal Avatar"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9.0"
authors = [{ name = "3DRX", email = "3drxkjy@gmail.com" }]
keywords = ["voice", "ai", "realtime", "audio", "video", "livekit", "webrtc", "avatar", "spatialreal"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "livekit-agents>=1.2.9",
    "avatarkit>=0.1.3",
]

[project.urls]
Documentation = "https://docs.spatialreal.com"
Website = "https://spatialreal.com/"
Source = "https://github.com/spatialreal/livekit-plugins-spatialreal"

[tool.hatch.version]
path = "livekit/plugins/spatialreal/version.py"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]

[tool.hatch.build.targets.sdist]
include = ["/livekit"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
